# data-catalog-assistant

./: .env.example  .gitignore  README.md  WORKING_COPY.md  pyproject.toml  requirements.txt
batch_jobs/: __init__.py  refresh_vector_db.py  run_refresh_job.py  scheduler.py  temp_smoke.py
config/: config.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEMO_SCRIPT.md  GITHUB_PUBLISH.md  MAIN_PLAN.md  MCP_DEMO.md  SETUP_GUIDE.md  SHOWCASE.md
etl_samples/: README.md  load_order_line_facts.yaml  load_orders_summary.yaml  load_product_sales_fact.yaml  refresh_employee_dim.yaml
scripts/: README.md  __init__.py  check_chroma.py  demo_chroma.py  fix_commit_no_cursor.ps1  mcp_smoke.py  preflight_refresh.py  publish_commit.ps1  run_ingestion.py  test_dw_connection.py
sql_samples/: README.md  customers_recent_orders.sql  employee_sales_totals.sql  orders_by_customer.sql  product_revenue_by_category.sql  recent_orders_by_shipper.sql
src/: __init__.py  main.py
tests/: __init__.py  test_change_asset_resolver.py  test_chroma_integration.py  test_chroma_persistence.py  test_chroma_upsert.py  test_config_loader.py  test_data_processor_phase_b.py  test_datawarehouse_connector.py  test_etl_parser.py  test_gradio_interface.py  test_impact_analyzer.py  test_impact_view.py  test_ingestion_etl.py  test_ingestion_pipeline.py  test_ingestion_sql.py  test_lineage_service.py  test_lineage_view.py  test_llm_prompt_logging.py  test_mcp_app.py  test_mcp_server.py  test_mcp_tools_integration.py  test_metadata_store.py  test_production_samples.py  test_query_processor_rag.py  (+6 more)
(+42 files in other folders)
