[project]
name = "data-catalog-assistant"
version = "0.1.0"
description = "RAG-powered data catalog, lineage, and change-impact assistant with REST and MCP interfaces."
requires-python = ">=3.10"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "chroma_data",
    "logs",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
    "E501",  # line length is handled by the formatter, not enforced as an error
    "B008",  # function calls in argument defaults (FastAPI Body/Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "F841"]
"__init__.py" = ["F401"]
# Entry points and scripts bootstrap sys.path before importing project modules.
"src/main.py" = ["E402"]
"src/mcp_server/mcp_app.py" = ["E402"]
"batch_jobs/*" = ["E402"]
"tests/test_rag_engine.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
